# aTox

.github/workflows/: btox-build.yaml  build-apk.yaml
atox/: build.gradle.kts
atox/src/main/kotlin/: App.kt  ToxService.kt
atox/src/main/kotlin/settings/: Settings.kt
atox/src/main/kotlin/ui/chat/: ChatFragment.kt
atox/src/main/res/drawable/: bg_input_pill.xml  ic_mic_record.xml
atox/src/main/res/layout/: fragment_chat.xml
atox/src/main/res/values/: colors.xml  strings.xml  styles.xml
atox/src/main/res/values-night/: colors.xml  styles.xml
atox/src/main/res/xml/: file_paths.xml
btox/: .gitignore  build_android.ps1  build_android.sh  dev.ps1  flutter_rust_bridge.yaml
btox/flutter/: pubspec.yaml
btox/flutter/lib/: main.dart
btox/flutter/lib/bridge/: btox_api.dart
btox/flutter/lib/screens/: add_friend_screen.dart  chat_screen.dart  home_screen.dart
btox/flutter/lib/widgets/: push_to_talk_button.dart
btox/rust/: Cargo.toml
btox/rust/src/: file_transfer.rs  lib.rs  messaging.rs  tox_core.rs  voice.rs
core/: build.gradle.kts
domain/: build.gradle.kts
domain/src/main/kotlin/tox/: Tox.kt
gradle/: libs.versions.toml
scripts/: fetch-tox4j-windows.ps1
