[package]
name = "btox_core"
version = "0.1.0"
edition = "2021"
description = "BTOX — Rust core for the Tox protocol (qTox-compatible)"
license = "GPL-3.0-or-later"

[lib]
name = "btox_core"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
# Varsayılan: stub mod — UI/iskeleti bağımsız test etmek için.
default = []
# c-toxcore FFI ile gerçek Tox protokolü (qTox uyumlu).
# Android'de cargo-ndk + NDK gerektirir; build_android.{ps1,sh} otomatik halleder.
real-tox = ["dep:rstox"]

[dependencies]
# flutter_rust_bridge
flutter_rust_bridge = "2.0"

# Gerçek Tox protokolü (opsiyonel — c-toxcore FFI, qTox ile aynı wire format)
rstox = { version = "0.1", optional = true }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs", "io-util", "macros", "time"] }
futures = "0.3"

# Serializasyon / hata
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hex encode/decode (Tox ID 76-hex)
hex = "0.4"

# Logging
log = "0.4"
android_logger = "0.13"

# Ses (Push-to-talk için Opus encode)
opus = "0.3"

# Chunklı dosya transferi için yardımcı I/O
bytes = "1"

# Statik tek seferlik init (encoder oturumları, transfer haritaları)
once_cell = "1"

# Host'ta (Android dışı) test/log
env_logger = "0.11"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"



